更新 2023-10-01 pascal的一些感慨.md

--- a/source/_posts/2023-10/2023-10-01 pascal的一些感慨.md
+++ b/source/_posts/2023-10/2023-10-01 pascal的一些感慨.md
@@ -61,4 +61,10 @@ emmm，打开的这个窗口，不仅不能拖拽，甚至不能全屏，唉😶
 
 早就把 pascal 的语法忘得一干二净了，赋值用 `:=` ，end语句后面要有句号，甚至var为什么是在begin外面写的orz。
 
-就这么几行代码，改了好几次错，终于跑起来了
+就这么几行代码，改了好几次错，终于跑起来了。编译、运行，曾经根本不明白意思的单词，现在甚至甚至成为了project的名字（compile）
+
+但是我甚至不记得该怎么看输出，查了半天查到是在debug里的output项看，终于有结果了
+
+![黑框框，但是我不知道怎么关](/Cx330-502-Blogs/files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic3.png)
+
+没错，这就是我人生的第一段代码，不是hello world，只是这个简单的变量相加。甚至当时绝大多数语句我根本不知道是什么意思，不知道什么是变量，什么是赋值，只知道这么对着写就能出来数字
