--- a/source/_posts/2023-10/2023-10-01 pascal的一些感慨.md
+++ b/source/_posts/2023-10/2023-10-01 pascal的一些感慨.md
@@ -67,4 +67,10 @@ emmm，打开的这个窗口，不仅不能拖拽，甚至不能全屏，唉😶
 
 ![黑框框，但是我不知道怎么关](/Cx330-502-Blogs/files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic3.png)
 
-没错，这就是我人生的第一段代码，不是hello world，只是这个简单的变量相加。甚至当时绝大多数语句我根本不知道是什么意思，不知道什么是变量，什么是赋值，只知道这么对着写就能出来数字
+没错，这就是我人生的第一段代码，不是hello world，只是这个简单的变量相加。甚至当时绝大多数语句我根本不知道是什么意思，不知道什么是变量，什么是赋值，只知道这么对着写就能出来数字。
+
+这么多年过去了，甚至 Pascal 都已经被时代遗忘了
+
+我也真的走上了写代码这条路
+
+但是还是不知道路在何方啊 . . . . . . 
