--- a/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
+++ b/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
@@ -14,7 +14,7 @@ keywords:
 description: 
 top_img:
 comments:
-cover: ./2023-11-13-从完蛋我被美女包围了看恋爱心理.assets/image-20231113233354760.png
+cover: /files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png
 toc:
 toc_number:
 toc_style_simple:
@@ -31,12 +31,7 @@ aside:
 abcjs:
 ---
 
-> 有一说一，XBOX手柄的截图，这是越来越捞了。。。以前还挺喜欢用的，然后就越来越卡。。。还不如Steam自带的截图，但是Steam截图质量又太差    难顶哦。。。
+> 啊吧啊吧
 
-![封面](/Cx330-502-Blogs/files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic6.png)
+![封面](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png)
 
-### 画面
-
-顽皮狗的美术功底确实牛逼。
-
-在看过游戏科学的访谈之后，就经常会关注游戏里的画面细节。比如说跳之类的动作
