--- a/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
+++ b/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
@@ -31,7 +31,30 @@ aside:
 abcjs:
 ---
 
-> 啊吧啊吧
+经过十个小时的游戏时间，终于把这个游戏白金了。趁着游戏热度过去了，我再围绕这个“年度科幻大作”来胡扯一点😏
 
 ![封面](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png)
+
+### 恋爱游戏？乐子游戏！
+
+游戏发售后的成绩可以说是相当优秀，可以说无论是玩家、开发商、演员都没想到它能达到这样的成绩：
+
+> Steam 2万+评论  好评率 **94%** 好评如潮
+> 小黑盒 7309人评分  评分 **9.4**
+> 峰值在线 **6.5w+** 哪怕发售一个月后，每日峰值在线仍然是 **1w+**
+> 多次登上国区销量榜**前十**甚至**榜首**
+
+仅就这样的成绩，可以说是相当的牛逼！
+
+但与这种优异成绩形成对比的，是游戏本身的质量并不算高，甚至在同类型互动影视游戏中可以说是相当差了：部分演员频繁的笑场、离谱的剧情、以及相当不符合逻辑的系统，绝大多数的差评也正是来源于此。
+
+可以说，这个游戏唯一的亮点可能也就是几个女主的演技确实在线，对细节的处理能够让人有代入感了（虽然这个代入感下一秒就会被逆天剧情击碎）。
+
+但是，实际上这个游戏的卖点或者说宣传点真的是里面的恋爱吗？错误的！
+
+正如我标题中所说
+
+
+
+
 
