--- a/source/_posts/2023-12/2023-12-31-年终总结.md
+++ b/source/_posts/2023-12/2023-12-31-年终总结.md
@@ -31,50 +31,43 @@ aside:
 abcjs:
 ---
 
-最近学编译原理的时候，经常以 Pascal 作为例子
+![啊吧啊吧](/Cx330-502-Blogs/files_/pics/post_pics/2023-12/2023-12-31-年终总结/pic1.jpg)
 
-今天突然就感觉到了一点触动，上网重新下了 free pascal 的编译器。
+年尾啦，好像是应该写点什么了~~
 
-2023年了， Free Pascal的最新版本仍然只有2021年的版本，不过依稀记得2020年noip就已经不让用pascal了？终究是被淘汰的语言，时代的眼泪了属于是
+其实我更希望从音乐和游戏的角度展开这篇年度总结：
 
-选了一个号称是 64 位的版本下载，果然下载下来还是32位的😵‍💫windows xp的好伙伴😏😏😏
+看了一下去年的年度歌曲，《最佳配角》和《景泰江湖》，一首是渐入高潮的嘲弄与讽刺，一首是风雨送恩仇的快意和潇洒。好像确实很符合去年的经历：认识了很多朋友，也经历了很多……
 
-没有 Java python 之类复杂的环境要求，就像一个普通的软件一样，双击 exe 安装然后一直 next 就行了。
+6月份生日的时候，一个人在西山顶听了很久的《终不还》
 
-然后双击图标，发现 . . . . . . 根本打不开。
+> 我曾见过黄河水入海奔流
+> 足以消尽今夜万古愁
+> 谪仙人籍籍无名
+> 却与我永隔山海 神交已久
 
-![9c020cb6b93e03c176d0c21e81f361b](./assets/9c020cb6b93e03c176d0c21e81f361b.jpg)
+潇洒、决然，是我对这首歌的印象。在地狱般的大二下，有这样的情绪似乎很正常。相比较一年前的懵懂，大二的完结已经基本完结了几乎全部专业知识：数据库、Vue、Django、OO…… 终于结束了大二，标志着终于有时间去自己做一些选择。也正是在这样的时间点上，写下了那篇很乱的总结。
 
-![控制台](/Cx330-502-Blogs/files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic4.png)
+后来，我感觉好像真的自己走出了一点东西，不再是被一些计划或者方案押着往前走，一个人走过了很多地方，也做到了一些以前很难想象的事情。
 
-有的只是这样一个一闪而过的黑框框，没错 Win11 的新控制台甚至已经不支持这个 IDE 了，我哭死。
+一次次独行，似乎唤醒了一些曾经的孤僻——更加平静，更加收敛，更喜欢独行，甚至淡化了很多情感。于是，我遇上了《皎皎》。
 
-右键free pascal的图标，点属性，进去之后选择选项标签页。把最底下那个使用旧版控制台勾上，然后点击应用。（由于只是暂时用一下，就不重启电脑了。）再双击图标，终于打开了free pascal。
+它那么好听吗？好像也并没有到《倾尽天下》那种惊艳的程度。它好像没有那种古风歌常见的潇洒，也没有缱绻或者流连，好像只是在平淡的诉说一件件小事
 
-![熟悉的乱码](/Cx330-502-Blogs/files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic1.png)
+>为你画眉时听着万人齐贺
+>
+>相誓要偕老的那个 绝不会是我
+>
+>结发同车 纷纷而过窗外巷陌
+>
+>并肩的人各自南辕北辙
 
-emmm，打开的这个窗口，不仅不能拖拽，甚至不能全屏，唉😶😶😶
+好像有遗憾，好像也有感慨，但最后却只道寻常
 
-映入眼帘的是熟悉的中文乱码，依稀记得要在属性里面把语言改成US，然后再打开乱码会少一点。不过好像在属性栏里已经找不到这个了，算了罢()
+喜欢它似乎真的是因为那种突然的悸动，最终引起了共鸣，1600多次单曲循环，已经习惯了音乐中的那种平静，就像回忆起诺克提斯梦中的婚礼、就像A2最后仰望天空最后的一句“原来世界这么美”，所有的感觉似乎都在一声感慨中烟消云散
 
-看着这个首页，依稀能看出来组成了三个字符 FPC 也就是 free pascal
+在这一年里，遇见了很多新朋友，也经常和一些老朋友battle；有很多开心，也有很多无奈……和半年前比，我似乎并没有太多变化，迷茫、麻木，站在考研的面前，这一次不得不做出选择了
 
-新建一个program
+最近仍然经常想起李白，如果是他，会怎么选……
 
-![写点代码吧](/Cx330-502-Blogs/files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic2.png)
-
-早就把 pascal 的语法忘得一干二净了，赋值用 `:=` ，end语句后面要有句号，甚至var为什么是在begin外面写的orz。
-
-就这么几行代码，改了好几次错，终于跑起来了。编译、运行，曾经根本不明白意思的单词，现在甚至甚至成为了project的名字（compile）
-
-但是我甚至不记得该怎么看输出，查了半天查到是在debug里的output项看，终于有结果了
-
-![黑框框，但是我不知道怎么关](/Cx330-502-Blogs/files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic3.png)
-
-没错，这就是我人生的第一段代码，不是hello world，只是这个简单的变量相加。甚至当时绝大多数语句我根本不知道是什么意思，不知道什么是变量，什么是赋值，只知道这么对着写就能出来数字。
-
-这么多年过去了，甚至 Pascal 都已经被时代遗忘了
-
-我也真的走上了写代码这条路
-
-但是还是不知道路在何方啊 . . . . . . 
+就这样吧，该开始玩了(doge)
