更新 2023-12-31-年终总结.md

--- a/source/_posts/2023-12/2023-12-31-年终总结.md
+++ b/source/_posts/2023-12/2023-12-31-年终总结.md
@@ -46,11 +46,11 @@ abcjs:
 > 谪仙人籍籍无名
 > 却与我永隔山海 神交已久
 
-潇洒、决然，是我对这首歌的印象。在地狱般的大二下，有这样的情绪似乎很正常。相比较一年前的懵懂，大二的完结已经基本完结了几乎全部专业知识：数据库、Vue、Django、OO…… 终于结束了大二，标志着终于有时间去自己做一些选择。也正是在这样的时间点上，写下了那篇很乱的总结。
+潇洒、决然，是我对这首歌的印象。在地狱般的大二下，有这样的情绪似乎很正常。相比较一年前的懵懂，大二的完结已经基本完结了几乎全部专业知识：数据库、Vue、Django、OO…… 终于结束了大二，标志着终于有时间去自己做一些选择。也正是在这样的时间点上，写下了那篇很乱的总结
 
-后来，我感觉好像真的自己走出了一点东西，不再是被一些计划或者方案押着往前走，一个人走过了很多地方，也做到了一些以前很难想象的事情。
+后来，我感觉好像真的自己走出了一点东西，不再是被一些计划或者方案押着往前走，一个人走过了很多地方，也做到了一些以前很难想象的事情
 
-一次次独行，似乎唤醒了一些曾经的孤僻——更加平静，更加收敛，更喜欢独行，甚至淡化了很多情感。于是，我遇上了《皎皎》。
+一次次独行，似乎唤醒了一些曾经的孤僻——更加平静，更加收敛，更喜欢独行，甚至淡化了很多情感。于是，我遇上了《皎皎》
 
 它那么好听吗？好像也并没有到《倾尽天下》那种惊艳的程度。它好像没有那种古风歌常见的潇洒，也没有缱绻或者流连，好像只是在平淡的诉说一件件小事
 
@@ -64,10 +64,12 @@ abcjs:
 
 好像有遗憾，好像也有感慨，但最后却只道寻常
 
-喜欢它似乎真的是因为那种突然的悸动，最终引起了共鸣，1600多次单曲循环，已经习惯了音乐中的那种平静，就像回忆起诺克提斯梦中的婚礼、就像A2最后仰望天空最后的一句“原来世界这么美”，所有的感觉似乎都在一声感慨中烟消云散
+喜欢它似乎真的是因为突然的悸动，最终引起了共鸣，1600多次单曲循环，已经习惯了音乐中的那种平静，就像回忆起诺克提斯梦中的婚礼、就像A2最后仰望天空最后的一句“原来世界这么美”，所有的感觉似乎都在一声感慨中烟消云散
 
 在这一年里，遇见了很多新朋友，也经常和一些老朋友battle；有很多开心，也有很多无奈……和半年前比，我似乎并没有太多变化，迷茫、麻木，站在考研的面前，这一次不得不做出选择了
 
 最近仍然经常想起李白，如果是他，会怎么选……
 
 就这样吧，该开始玩了(doge)
+
+愿人类荣光永存!
