更新 2024-01-15-最终幻想13测评.md

--- a/source/_posts/2024-01/2024-01-15-最终幻想13测评.md
+++ b/source/_posts/2024-01/2024-01-15-最终幻想13测评.md
@@ -15,7 +15,7 @@ keywords:
   - 游戏测评
   - 最终幻想13
   - Final Fantasy
-description: 
+description: 我醒来后的第13天,世界奏响了毁灭的乐章
 top_img:
 comments:
 cover: /files_/pics/post_pics/2024-01/2024-01-15-最终幻想13测评/pic1.jpg
