更新 游戏生涯.md

--- a/source/_posts/continuous/游戏生涯.md
+++ b/source/_posts/continuous/游戏生涯.md
@@ -36,11 +36,11 @@ abcjs:
 
 但是很多已经不记得了...... 而且很多游戏玩不懂  乐
 
-### 通关：
+### 通关
 
 + 刺客信条2
 
-### 持续玩：
+### 持续玩
 
 + 永劫无间
 
@@ -50,14 +50,16 @@ abcjs:
 
 这年应该是能玩懂一些游戏了
 
-### 通关：
+**年度最佳：** ***Final Fantasy VII Remake***
+
+### 通关
 
 + 生化危机：无限
 + 泰坦陨落2
 + 黄泉之路
 + 奥日与黑暗森林
 + 幽灵行者
-+ + 最终幻想7re
++ 最终幻想7re
 + Mirror
 + 戴森球计划
 + 鬼泣5
@@ -65,16 +67,20 @@ abcjs:
 + 俄罗斯方块效应链接
 + 风之旅人
 
-### 持续玩：
+### 持续玩
 
 + 戴森球计划
 + 以撒
+
+
 
 # 2023 年
 
 开始有了自己喜欢的游戏类型
 
-### 通关：
+**年度最佳：** ***Nier：Automata***
+
+### 通关
 
 + 战神4
 + 暖雪
@@ -83,7 +89,7 @@ abcjs:
 + 赛博朋克2077
 + 吸血鬼幸存者
 + 杀戮尖塔
-+ 尼尔机械纪元
++ + 尼尔机械纪元
 + 尼尔人工生命
 + 艾迪芬奇的记忆
 + 最后生还者
@@ -94,7 +100,7 @@ abcjs:
 + 死亡细胞
 + 完蛋！我被美女包围了
 
-### 持续玩：
+### 持续玩
 
 + 杀戮尖塔
 
@@ -102,7 +108,7 @@ abcjs:
 
 加油
 
-### 通关：
+### 通关
 
 + 幻兽帕鲁
 + 漫威蜘蛛侠 麦尔斯莫拉莱斯
