--- a/source/_posts/2024-01/2024-01-15-最终幻想13系列测评.md
+++ b/source/_posts/2024-01/2024-01-15-最终幻想13系列测评.md
@@ -39,9 +39,36 @@ abcjs:
 
 ![真有的你的SE](/Cx330-502-Blogs//files_/pics/post_pics/2024-01/2024-01-15-最终幻想13系列测评/pic2.jpg)
 
+最终个人对最终幻想13系列的评价是：FF13本传 > FF13雷霆归来 > FF13-2
 
+FF13本传是自己打通的，13-2和雷霆归来都是自己玩了四到五个小时之后开云的，接下来的评测会按照顺序进行测评
 
 ![雷霆姐😍😍😍](/Cx330-502-Blogs//files_/pics/post_pics/2024-01/2024-01-15-最终幻想13系列测评/pic1.jpg)
 
-### 画面
+### 最终幻想13
 
+#### 画面
+
+PS3时代下的T0级别，榨干PS3的机能了属于是。大量的过场cg有一种看大片的享受，只能说这个时期的SE虽然也是内斗不断，但是技术能力是真的牛逼，比较同时代刺客信条2的画面简直就是薄纱
+
+#### 剧情
+
+FF13争议最大的一个点，但是从个人角度来说，其实还是很棒的。
+
+最大的问题其实在于新水晶神话系列最后失败了，导致玩家对水晶神话的大背景不清楚，如果补充水晶神话的背景，整个13的背景不能说非常精彩，也算是佳作水平的剧情了。
+
+主角团之间的羁绊、对立，甚至还有大量配角的塑造，都仍然贯彻了 jrpg 的高水准。
+
+#### Gameplay
+
+##### 战斗
+
+很多人说战斗不好玩，但是我反而觉得战斗系统相当精妙：半即时战斗机制结合ATB系统，再加上阵型的搭配，应该说是远强于FF13-2，属于是越玩越深了。
+
+就是Jrpg要肝等级的问题仍然存在。。。
+
+##### 关卡
+
+仍然会觉得一本道是最适合rpg的叙事设计
+
+#### 音乐
