--- a/source/_posts/2024-02/2024-02-25.md
+++ b/source/_posts/2024-02/2024-02-25.md
@@ -47,3 +47,15 @@ abcjs:
 似乎还有一些 idea 等着我去实现，更高程度的自动化，更好的规划......不过，这个机器人应该从现在开始就要停止更新了(单纯是没有时间)
 
 (差不多水点字数，后面不知道怎么写了)😏😏😏
+
+![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(1).jpg)
+
+![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(2).jpg)
+
+![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(3).jpg)
+
+![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(4).jpg)
+
+![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(5).jpg)
+
+![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(6).jpg)
