--- a/source/_posts/continuous/游戏生涯.md
+++ b/source/_posts/continuous/游戏生涯.md
@@ -30,6 +30,20 @@ aside:
 abcjs:
 ---
 
+> 说明：每年个人奖项基本按照TGA奖项，由于每年通关游戏有限，大概率会空很多
+> + 年度最佳游戏
+> + 最佳角色扮演游戏
+> + 最佳动作冒险游戏
+> + 最佳叙事游戏
+> + 最佳动作游戏
+> + 最佳艺术指导奖
+> + 最佳独立游戏
+> + 最佳配乐奖
+> + 最佳音效设计
+> + 最佳家庭游戏
+> + 最佳移动游戏
+
+
 # 2021 年
 
 高考结束了~ 朕的单机游戏元年
@@ -39,18 +53,19 @@ abcjs:
 ### 通关
 
 + 刺客信条2
++ 笼中窥梦
 
 ### 持续玩
 
 + 永劫无间
 
+### 个人年度颁奖
 
+就仨游戏，没必要了吧 doge
 
 # 2022 年
 
 这年应该是能玩懂一些游戏了
-
-**年度最佳：** ***Final Fantasy VII Remake***
 
 ### 通关
 
@@ -72,7 +87,49 @@ abcjs:
 + 戴森球计划
 + 以撒
 
+### 个人年度颁奖
 
++ **年度最佳游戏：** ***最终幻想7重制版***
+
+  +  > 让我真正认识到rpg游戏的魅力
+
++ 最佳角色扮演游戏：最终幻想7重制版
+
+  + > 别问，问就是好
+
++ 最佳动作冒险游戏：幽灵行者
+
+  + > 快就是帅，帅就是好
+
++ 最佳叙事游戏： 底特律变人
+
+  + > This is not just a story， this is our future.
+
++ 最佳动作游戏：鬼泣5
+
+  + > If you want it, then you have to take it.
+
++ 最佳艺术指导奖：奥日、风之旅人、俄罗斯方块效应链接
+
+  + > 这仨我都想选
+
++ 最佳独立游戏：奥日
+
+  + >感觉这个游戏被吹的有点过
+
++ 最佳配乐奖：俄罗斯方块效应链接
+
+  + > 神
+
++ 最佳音效设计：俄罗斯方块效应链接
+
+  + > 神
+
++ 最佳家庭游戏：无
+
++ 最佳移动游戏：无
+
+妈耶，生化危机无限和ttf2竟然一个都没有
 
 # 2023 年
 
@@ -89,7 +146,7 @@ abcjs:
 + 赛博朋克2077
 + 吸血鬼幸存者
 + 杀戮尖塔
-+ + 尼尔机械纪元
++ 尼尔机械纪元
 + 尼尔人工生命
 + 艾迪芬奇的记忆
 + 最后生还者
@@ -104,6 +161,48 @@ abcjs:
 
 + 杀戮尖塔
 
+### 个人年度颁奖
+
+这么多神作，感觉会厮杀的很惨烈啊
+
++ **年度最佳游戏：** ***Nier：Automata***
+
+  + > Glory to mankind
+    >
+    > 愿人类荣光永存
+
++ 最佳角色扮演游戏：赛博朋克2077
+
+  + > 扬名立万还是无名小卒
+
++ 最佳动作冒险游戏：战神4
+
+  + > 战神和他的老父亲
+
++ 最佳叙事游戏： 最后生还者
+
+  + > 最美好的谎言
+
++ 最佳动作游戏：无
+
++ 最佳艺术指导奖：艾迪芬奇的记忆
+
+  + > 游戏界的百年孤独
+
++ 最佳独立游戏：杀戮尖塔
+
+  + >她不美死🤤
+
++ 最佳配乐奖：尼尔机械纪元
+
++ 最佳音效设计：尼尔机械纪元
+
++ 最佳家庭游戏：无
+
++ 最佳移动游戏：无
+
+太惨烈了orz
+
 # 2024 年
 
 加油
@@ -111,9 +210,43 @@ abcjs:
 ### 通关
 
 + 霓虹白客
+
+  + > 喜欢跑酷游戏但没玩《霓虹白客》，就像四大名著不看红楼梦。说明这个人文化造诣和自我修养不足。他理解不了这种内在的阳春白雪的高雅艺术，他只能看到外表的词藻堆彻，参不透其中深奥的精神内核。他整个人的层次就卡在这里了，只能度过一个相对失败的人生。
+
 + 幻兽帕鲁
+
+  + > 肝没了
+
 + 漫威蜘蛛侠 麦尔斯莫拉莱斯
+
+  + > 啥都好，就是贵
+
 + 最终幻想13
+
+  + >神已消失在无法望见的世界中，水晶神话结束了
+    >
+    >人们在新世界中重生，开始朝未来踏出新的步伐
+    >
+    >或许有时迷茫在冷漠的黑暗中，夜晚不断地颤抖
+    >
+    >但人们能伸出自己的一双手一同齐心向前，发现种种的羁绊，从心手相连的双掌间孕育的温暖会化为希望
+    >水晶神话——是行星诞生前的故事
+    >是你未诞生前的物语，是我们活下去的希望
+    >无论这个故事有多少不足之处
+    >雷霆姐的强悍美丽和人性光辉
+    >都在那些美好的瞬间给我们刻上了深刻的一笔
+    >这无限美丽而又充满遗憾的新水晶神话三部曲
+    >等到了结束的那一刻
+    >再也没有任何褒与贬的想法
+    >望着雷霆姐走下列车时那一刻的笑容
+    >我知道这一切都值得
+    >因为这是无法忘怀的
+    >生命中最美丽的篇章
+
 + 最终幻想13-2 （云）
+
 + 最终幻想13雷霆归来 （云）
+
+
+
 + 苍翼：混沌效应
