--- a/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
+++ b/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
@@ -33,7 +33,7 @@ abcjs:
 
 经过十个小时的游戏时间，终于把这个游戏白金了。趁着游戏热度过去了，我再围绕这个“年度科幻大作”来胡扯一点😏
 
-![封面](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png)
+![封面](./../../files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png)
 
 ### 恋爱游戏？乐子游戏！
 
