--- a/source/_posts/2023-11/2023-11-19漫威蜘蛛侠测评.md
+++ b/source/_posts/2023-11/2023-11-19漫威蜘蛛侠测评.md
@@ -39,7 +39,7 @@ abcjs:
 >
 > 如果有时间，可能会把今年通的其他游戏（这个博客诞生之前的）再写一下
 
-![封面](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-09-18最后生还者测评/pic1.png)
+![封面](./../../files_/pics/post_pics/2023-11/2023-09-18最后生还者测评/pic1.png)
 
 ### 画面
 
@@ -49,19 +49,19 @@ abcjs:
 
 怎么说呢，对漫威蜘蛛侠的画面层次赞誉从游戏的最初就开始了。当彼得帕克首次穿上战衣的那一刻，战衣的编织细节，在细腻的光影下熠熠生辉；透过战衣，能清晰的看到肌肉的线条，电影般的质感瞬间让人沉浸其中。
 
-![有人看乐子,有人照镜子.jpg](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic2.png)
+![有人看乐子,有人照镜子.jpg](./../../files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic2.png)
 
 演出的画面同样让人感到是顶级大片带来的特效，电光、雨水、心魔的能量，渲染之下让每一次的 boss 战都沉浸式地达到顶峰，如果说一定要找一款游戏能达到这种级别的演出效果，那也只能是同出索尼门下的《战神》。（所以索尼的第一方都在相互学习，反观 . . . . . . 咳咳咳）
 
 上图！！！
 
-![一下出来这么多boss，我也认不全啊](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic4.png)
+![一下出来这么多boss，我也认不全啊](./../../files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic4.png)
 
 （和这几个BOSS互殴的时候是真nm帅啊，其他游戏出一个这种BOSS怎么说得铺垫一个小时，好家伙这直接一下上四个，半个小时全打完）
 
-![其实感觉心魔剧情还能深挖](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic5.png)
+![其实感觉心魔剧情还能深挖](./../../files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic5.png)
 
-![哦吼](/Cx330-502-Blogs/files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic3.png)
+![哦吼](./../../files_/pics/post_pics/2023-11/2023-11-19漫威蜘蛛侠测评/pic3.png)
 
 ### 剧情
 
