--- a/source/_posts/2024-02/2024-02-25.md
+++ b/source/_posts/2024-02/2024-02-25.md
@@ -48,14 +48,14 @@ abcjs:
 
 (差不多水点字数，后面不知道怎么写了)😏😏😏
 
-![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(1).jpg)
+![](./../../files_/pics/post_pics/2024-02/2024-02-25/(1).jpg)
 
-![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(2).jpg)
+![](./../../files_/pics/post_pics/2024-02/2024-02-25/(2).jpg)
 
-![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(3).jpg)
+![](./../../files_/pics/post_pics/2024-02/2024-02-25/(3).jpg)
 
-![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(4).jpg)
+![](./../../files_/pics/post_pics/2024-02/2024-02-25/(4).jpg)
 
-![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(5).jpg)
+![](./../../files_/pics/post_pics/2024-02/2024-02-25/(5).jpg)
 
-![](/Cx330-502-Blogs/files_/pics/post_pics/2024-02/2024-02-25/(6).jpg)
+![](./../../files_/pics/post_pics/2024-02/2024-02-25/(6).jpg)
