--- a/source/_posts/2024-04/2024-04-14.md
+++ b/source/_posts/2024-04/2024-04-14.md
@@ -47,11 +47,11 @@ abcjs:
 晚上吃鸡煲吃到咬到辣椒差点寄。
 今天不宜吃饭了属于是😵‍💫
 
+昨天给博客新加了个加密插件，今天调了一堆css，唉，前端😫😫😫
+
 和学长吃夜宵的时候聊了很多：
 
-考研已经摆了快一个月了，反倒没有了之前的很多焦虑。还记得大二下刚结束的那个暑假，应该是最焦虑的时间段吧。当时觉得终于从一堆地狱专业课里出来了，似乎有很多选择就在前方，在选择的路口不断徘徊犹豫 . . . . . . 这种情绪甚至伴随了整个大三上，直到那个电话，才意识到
-
->  很多可能的选择已经在不经意间错过了
+考研已经摆了快一个月了，反倒没有了之前的很多焦虑。还记得大二下刚结束的那个暑假，应该是最焦虑的时间段吧。当时觉得终于从一堆地狱专业课里出来了，似乎有很多选择就在前方，在选择的路口不断徘徊犹豫 . . . . . . 这种情绪甚至伴随了整个大三上，直到那个电话，才意识到**很多可能的选择已经在不经意间错过了**
 
 不过也好，错过了很多选择，最后剩下的摆在面前的路就只剩考研一条了
 
