--- a/source/_posts/2024-04/2024-04-24-死亡搁浅测评.md
+++ b/source/_posts/2024-04/2024-04-24-死亡搁浅测评.md
@@ -13,7 +13,7 @@ keywords:
   - 测评
   - 游戏测评
   - 死亡搁浅
-description: 绳子和棍棒是人类最早发明的两种工具，棍棒可以将良善之物拉近。它们是人类最早的朋友，也是我们的创造。有人的地方 一定也有绳子和棍棒。
+description: 绳子和棍棒是人类最早发明的两种工具，棍棒可以让邪恶之物远离，绳子将良善之物拉近。它们是人类最早的朋友，也是我们的创造。有人的地方 一定也有绳子和棍棒。
 top_img:
 comments:
 cover: /files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/2.png
