--- a/source/_posts/continuous/游戏生涯.md
+++ b/source/_posts/continuous/游戏生涯.md
@@ -252,3 +252,27 @@ abcjs:
 + 死亡搁浅导演剪辑版 2024.4.15
 
   + > 绳子和棍棒是人类最早发明的两种工具，棍棒可以将良善之物拉近。它们是人类最早的朋友，也是我们的创造。有人的地方 一定也有绳子和棍棒。
+  
++ 古剑奇谭三：梦赋千秋星垂野 2024.8.11
+
+  + > 愿我人族，于此梦魂江海，万古河山之间，星火世传，奋飞不辍
+
++ 黑神话：悟空 2024.9.7
+
+  + > 像一场久远的梦
+
++ 星之卡比：探索发现 2024.9.28
+
+  + > NS的第一个游戏，卡比可爱捏
+
++ 超级马里奥：奥德赛 2024.10.14
+
+  + > 愿你的快乐，永远不会被岁月消磨
+
++ 波斯王子：失落的王冠 2024.11.12
+
+  + > 优秀到不像是育碧的游戏
+
++ 最终幻想16 2024.11.17
+
+  + > 它本可以是六边形战士，最后却只成为了奔驰车标
