--- a/source/_posts/2024-12/2024-12-01月记.md
+++ b/source/_posts/2024-12/2024-12-01月记.md
@@ -37,7 +37,7 @@ aside:
 abcjs:
 ---
 
-11月写的太少了实在是 ...... 所以特地新增了月记的分类，大概在月底或者月初回顾一下之前的一个月吧
+11月写的太少了实在是，甚至11月初在Notion写完的两篇到现在才上传 ...... 都怪开题！！！所以特地新增了月记的分类，大概在月底或者月初回顾一下之前的一个月吧
 
 十一月，在我的印象里，就是好多好多的消费，cnm的开题，还有又一次的阳泉之行
 
