--- a/source/_posts/continuous/游戏生涯.md
+++ b/source/_posts/continuous/游戏生涯.md
@@ -5,6 +5,7 @@ updated: 2024-04-24 01:12:24
 tags:
   - 游戏
   - 测评
+  - 持续更新
 categories: 游戏测评
 keywords:
   - 游戏
@@ -280,3 +281,7 @@ abcjs:
 + 光明记忆：无限 2024.11.23
 
   + > 战斗！爽！
+  
++ 瑞奇与叮当：时空跳转 2024.12.15
+
+  + > 爆米花大片
