--- a/source/_posts/continuous/游戏生涯.md
+++ b/source/_posts/continuous/游戏生涯.md
@@ -172,31 +172,31 @@ abcjs:
     >
     > 愿人类荣光永存
 
-+ 最佳角色扮演游戏：赛博朋克2077
++ 最佳角色扮演游戏：**赛博朋克2077**
 
   + > 扬名立万还是无名小卒
 
-+ 最佳动作冒险游戏：战神4
++ 最佳动作冒险游戏：**战神4**
 
   + > 战神和他的老父亲
 
-+ 最佳叙事游戏： 最后生还者
++ 最佳叙事游戏： **最后生还者**
 
   + > 最美好的谎言
 
 + 最佳动作游戏：无
 
-+ 最佳艺术指导奖：艾迪芬奇的记忆
++ 最佳艺术指导奖：**艾迪芬奇的记忆**
 
   + > 游戏界的百年孤独
 
-+ 最佳独立游戏：杀戮尖塔
++ 最佳独立游戏：**杀戮尖塔**
 
   + >她不美死🤤
 
-+ 最佳配乐奖：尼尔机械纪元
++ 最佳配乐奖：**尼尔机械纪元**
 
-+ 最佳音效设计：尼尔机械纪元
++ 最佳音效设计：**尼尔机械纪元**
 
 + 最佳家庭游戏：无
 
@@ -207,6 +207,8 @@ abcjs:
 # 2024 年
 
 加油
+
+**年度最佳：** ***黑神话：悟空***
 
 ### 通关
 
@@ -285,3 +287,96 @@ abcjs:
 + 瑞奇与叮当：时空跳转 2024.12.15
 
   + > 爆米花大片
+
+### 持续玩
+
++ 杀戮尖塔
++ 小丑牌
+
+### 个人年度颁奖
+
++ **年度最佳游戏：** ***黑神话：悟空***
+
+  + > 还有死亡搁浅和马里奥都很喜欢呀
+    >
+    > 但是毕竟等了这么多年了~
+
++ 最佳角色扮演游戏：**古剑奇谭三：梦赋千秋星垂野**
+
++ 最佳动作冒险游戏：**黑神话：悟空**
+
++ 最佳叙事游戏： **最终幻想13 **
+
++ 最佳动作游戏：**最终幻想16**
+
++ 最佳艺术指导奖：**死亡搁浅导演剪辑版 **
+
++ 最佳独立游戏：**小丑牌**
+
++ 最佳配乐奖：**死亡搁浅导演剪辑版 **
+
++ 最佳音效设计：**死亡搁浅导演剪辑版 **
+
++ 最佳家庭游戏：**超级马里奥：奥德赛**
+
++ 最佳移动游戏：无
+
+### 年底小评
+
+今年买Switch啦！但是今年玩的游戏有点少嗷
+
+# 2025 年
+
+要多玩很多游戏！！！
+
+### 通关
+
++ Gris 色灰
+
+  + > 极致的艺术
+
++ 赛博朋克2077-往日之影
+
+  + > Let's start at the rainbow
+
++ Final Fantasy VII Rebirth
+
+  + > 再续华章
+
++ 幽灵行者2
+
+  + >将一代简洁优雅的系统添加的太过冗余
+
++ 动物栏：桌面牧场
+
+  + > 怎么不算游戏呢？
+
++ 塞尔达传说：旷野之息
+
+  + > 旷世之作
+
++ 超级马里奥兄弟：惊奇
+
+  + > 啊肚肚！
+  
++ 路易吉洋馆3
+
+  + > 顶级的关卡和逆天的操作
+
++ 传送门
+
+  + > 晕晕晕
+
++ 密特罗德：生存恐惧
+
+  + > 神仙地图但是引导也太弱了
+
++ 王座陨落
+
++ 光与影：33号远征队
+
+  + > GOTY
+
++ 任天堂明星大乱斗 特别版
+
+  + > 电子游戏博物馆说是
