--- a/source/_posts/2023-10/2023-10-01 pascal的一些感慨.md
+++ b/source/_posts/2023-10/2023-10-01 pascal的一些感慨.md
@@ -41,13 +41,13 @@ abcjs:
 
 然后双击图标，发现 . . . . . . 根本打不开。
 
-![控制台](./../../files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic4.png)
+![控制台](assets/2023-10-01 pascal的一些感慨/pic4.png)
 
 有的只是这样一个一闪而过的黑框框，没错 Win11 的新控制台甚至已经不支持这个 IDE 了，我哭死。
 
 右键free pascal的图标，点属性，进去之后选择选项标签页。把最底下那个使用旧版控制台勾上，然后点击应用。（由于只是暂时用一下，就不重启电脑了。）再双击图标，终于打开了free pascal。
 
-![熟悉的乱码](./../../files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic1.png)
+![熟悉的乱码](assets/2023-10-01 pascal的一些感慨/pic1.png)
 
 emmm，打开的这个窗口，不仅不能拖拽，甚至不能全屏，唉😶😶😶
 
@@ -57,7 +57,7 @@ emmm，打开的这个窗口，不仅不能拖拽，甚至不能全屏，唉😶
 
 新建一个program
 
-![写点代码吧](./../../files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic2.png)
+![写点代码吧](assets/2023-10-01 pascal的一些感慨/pic2.png)
 
 早就把 pascal 的语法忘得一干二净了，赋值用 `:=` ，end语句后面要有句号，甚至var为什么是在begin外面写的orz。
 
@@ -65,7 +65,7 @@ emmm，打开的这个窗口，不仅不能拖拽，甚至不能全屏，唉😶
 
 但是我甚至不记得该怎么看输出，查了半天查到是在debug里的output项看，终于有结果了
 
-![黑框框，但是我不知道怎么关](./../../files_/pics/post_pics/2023-10/2023-10-01 pascal的一些感慨/pic3.png)
+![黑框框，但是我不知道怎么关](assets/2023-10-01 pascal的一些感慨/pic3.png)
 
 没错，这就是我人生的第一段代码，不是hello world，只是这个简单的变量相加。甚至当时绝大多数语句我根本不知道是什么意思，不知道什么是变量，什么是赋值，只知道这么对着写就能出来数字。
 
