--- a/source/_posts/2023-10/2023-10-29.md
+++ b/source/_posts/2023-10/2023-10-29.md
@@ -35,8 +35,8 @@ abcjs:
 
 终于全成就了，如果不是为了全成就好多线可能都不会去玩的
 
-![全成就截图](./../../files_/pics/post_pics/2023-10/2023-10-29/1.jpg)
+![全成就截图](assets/2023-10-29/1.jpg)
 
 如果有空的话可能会写一篇杂谈吧，有关这个游戏和一些恋爱心理分析之类的 . . . . . . 嗯，如果有空的话 doge
 
-![遥遥领先.jpg](./../../files_/pics/post_pics/2023-10/2023-10-29/2.jpg)
+![遥遥领先.jpg](assets/2023-10-29/2.jpg)
