--- a/source/_posts/2023-12/2023-12-31-年终总结.md
+++ b/source/_posts/2023-12/2023-12-31-年终总结.md
@@ -31,7 +31,7 @@ aside:
 abcjs:
 ---
 
-![啊吧啊吧](./../../files_/pics/post_pics/2023-12/2023-12-31-年终总结/pic1.jpg)
+![啊吧啊吧](assets/2023-12-31-年终总结/pic1.jpg)
 
 年尾啦，好像是应该写点什么了~~
 
