--- a/source/_posts/2024-01/2024-01-15-最终幻想13系列测评.md
+++ b/source/_posts/2024-01/2024-01-15-最终幻想13系列测评.md
@@ -18,7 +18,7 @@ keywords:
 description: 我醒来后的第13天,世界奏响了毁灭的乐章
 top_img:
 comments:
-cover: /files_/pics/post_pics/2024-01/2024-01-15-最终幻想13系列测评/pic1.jpg
+cover: assets/2024-01-15-最终幻想13系列测评/pic1.jpg
 toc:
 toc_number:
 toc_style_simple:
@@ -37,13 +37,13 @@ abcjs:
 
 > 暴力移植，各种问题一堆。ff13还只是弄繁中麻烦，，ff13-2更是既要改语言，还要解决一堆bug，真有你的啊SE
 
-![真有的你的SE](./../../files_/pics/post_pics/2024-01/2024-01-15-最终幻想13系列测评/pic2.jpg)
+![真有的你的SE](assets/2024-01-15-最终幻想13系列测评/pic2.jpg)
 
 最终个人对最终幻想13系列的评价是：FF13本传 > FF13雷霆归来 > FF13-2
 
 FF13本传是自己打通的，13-2和雷霆归来都是自己玩了四到五个小时之后开云的，接下来的评测会按照顺序进行测评
 
-![雷霆姐😍😍😍](./../../files_/pics/post_pics/2024-01/2024-01-15-最终幻想13系列测评/pic1.jpg)
+![雷霆姐😍😍😍](assets/2024-01-15-最终幻想13系列测评/pic1.jpg)
 
 ### 最终幻想13
 
