--- a/source/_posts/2024-04/2024-04-24-死亡搁浅测评.md
+++ b/source/_posts/2024-04/2024-04-24-死亡搁浅测评.md
@@ -16,7 +16,7 @@ keywords:
 description: 绳子和棍棒是人类最早发明的两种工具，棍棒可以让邪恶之物远离，绳子将良善之物拉近。它们是人类最早的朋友，也是我们的创造。有人的地方 一定也有绳子和棍棒。
 top_img:
 comments:
-cover: /files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/2.png
+cover: assets/2024-04-24-死亡搁浅测评/2.png
 toc:
 toc_number:
 toc_style_simple:
@@ -33,7 +33,7 @@ aside:
 abcjs:
 ---
 
-![封面](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/2.png)
+![封面](assets/2024-04-24-死亡搁浅测评/2.png)
 
 ## 测评
 
@@ -45,21 +45,21 @@ abcjs:
 
 画质好的游戏很多，但是游戏的画面风格却全看制作人的功力，死亡搁浅仅就画风已足以被称之为艺术品。
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/1.png)
+![](assets/2024-04-24-死亡搁浅测评/1.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/3.png)
+![](assets/2024-04-24-死亡搁浅测评/3.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/4.png)
+![](assets/2024-04-24-死亡搁浅测评/4.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/5.png)
+![](assets/2024-04-24-死亡搁浅测评/5.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/6.png)
+![](assets/2024-04-24-死亡搁浅测评/6.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/7.png)
+![](assets/2024-04-24-死亡搁浅测评/7.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/8.png)
+![](assets/2024-04-24-死亡搁浅测评/8.png)
 
-![](./../../files_/pics/post_pics/2024-04/2024-04-24-死亡搁浅测评/9.png)
+![](assets/2024-04-24-死亡搁浅测评/9.png)
 
 ### Gameplay
 
