--- a/source/_posts/2024-07/2024-07-29古剑奇谭3.md
+++ b/source/_posts/2024-07/2024-07-29古剑奇谭3.md
@@ -45,13 +45,13 @@ abcjs:
 
 结果今天天鹿城剧情告一段落进鄢陵之后，直接真香现场了兄弟
 
-![这还是在巽风谷](./../../files_/pics/post_pics/2024-07/2024-07-29古剑奇谭3/20240729224617_1.jpg)
+![这还是在巽风谷](assets/2024-07-29古剑奇谭3/20240729224617_1.jpg)
 
-![没见过世面的王上.jpg](./../../files_/pics/post_pics/2024-07/2024-07-29古剑奇谭3/20240729235040_1.jpg)
+![没见过世面的王上.jpg](assets/2024-07-29古剑奇谭3/20240729235040_1.jpg)
 
-![鄢陵](./../../files_/pics/post_pics/2024-07/2024-07-29古剑奇谭3/20240729234735_1.jpg)
+![鄢陵](assets/2024-07-29古剑奇谭3/20240729234735_1.jpg)
 
-![鄢陵](./../../files_/pics/post_pics/2024-07/2024-07-29古剑奇谭3/20240729234751_1.jpg)
+![鄢陵](assets/2024-07-29古剑奇谭3/20240729234751_1.jpg)
 
 这几张还只是风景，还有各种市井气息：行走的侠客、飘飞的布帛、说书的老人、带娃的阿婆…… 想必这就是烟云十六声想象中的自己吧(
 
