--- a/source/_posts/2024-09/2024-09-30古剑奇谭3测评.md
+++ b/source/_posts/2024-09/2024-09-30古剑奇谭3测评.md
@@ -16,7 +16,7 @@ keywords:
 description: 天道作何,吞恨者多。千秋竟岁,伏苦飞逐。昆仑有玉,以为兵戈。山海遥阔,万世奋飞。
 top_img:
 comments:
-cover: /files_/pics/post_pics/2024-09/2024-09-30古剑奇谭3测评/1.jpg
+cover: assets/2024-09-30古剑奇谭3测评/1.jpg
 toc:
 toc_number:
 toc_style_simple:
@@ -33,7 +33,7 @@ aside:
 abcjs:
 ---
 
-![2](./../../files_/pics/post_pics/2024-09/2024-09-30古剑奇谭3测评/2.jpg)
+![2](assets/2024-09-30古剑奇谭3测评/2.jpg)
 
 我无比相信，这就是黑神话之前**最好的国产单机游戏**。
 
