--- a/source/_posts/2024-10/2024-10-01.md
+++ b/source/_posts/2024-10/2024-10-01.md
@@ -38,11 +38,11 @@ abcjs:
 简单放几张摘录的截图吧，更多的内容可能放在后面的杂谈里再说~
 
 
-![1](./../../files_/pics/post_pics/2024-10/2024-10-01/1.jpg)
+![1](assets/2024-10-01/1.jpg)
 
-![2](./../../files_/pics/post_pics/2024-10/2024-10-01/2.jpg)
+![2](assets/2024-10-01/2.jpg)
 
-![3](./../../files_/pics/post_pics/2024-10/2024-10-01/3.jpg)
+![3](assets/2024-10-01/3.jpg)
 
 #### 杂谈
 
