--- a/source/_posts/2023-09/2023-09-18最后生还者测评.md
+++ b/source/_posts/2023-09/2023-09-18最后生还者测评.md
@@ -16,7 +16,7 @@ keywords:
 description: 
 top_img:
 comments:
-cover: /files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic3.png
+cover: assets/2023-09-18最后生还者测评/pic3.png
 toc:
 toc_number:
 toc_style_simple:
@@ -35,7 +35,7 @@ abcjs:
 
 > 有一说一，XBOX手柄的截图，这是越来越捞了。。。以前还挺喜欢用的，然后就越来越卡。。。还不如Steam自带的截图，但是Steam截图质量又太差    难顶哦。。。
 
-![封面](./../../files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic6.png)
+![封面](assets/2023-09-18最后生还者测评/pic6.png)
 
 ### 画面
 
@@ -47,15 +47,15 @@ abcjs:
 
 整体的场景方面，其实有很多场景都是在黑黢黢的地方：房间、夜晚、下水道之类的，会感觉到非常压抑，但是每当从这类逼仄的空间出来后，顽皮狗的美术功底立刻就体现出来了，绝对的经验：
 
-![游戏截图](./../../files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic1.png)
+![游戏截图](assets/2023-09-18最后生还者测评/pic1.png)
 
-![游戏截图](./../../files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic2.png)
+![游戏截图](assets/2023-09-18最后生还者测评/pic2.png)
 
-![游戏截图](./../../files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic3.png)
+![游戏截图](assets/2023-09-18最后生还者测评/pic3.png)
 
-![游戏截图](./../../files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic4.png)
+![游戏截图](assets/2023-09-18最后生还者测评/pic4.png)
 
-![游戏截图](./../../files_/pics/post_pics/2023-09/2023-09-18最后生还者测评/pic5.png)
+![游戏截图](assets/2023-09-18最后生还者测评/pic5.png)
 
 只能说在画面这方面，顽皮狗确实没得说 ...... 但是 PC 优化是什么辣鸡啊， 2060 全程中低画质 50帧都稳不住，一看到掉帧就知道有人来了 ... 后期甚至肉眼就能看到人脸上或者物体表面的贴图变化。可用点心吧 ......
 
