--- a/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
+++ b/source/_posts/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理.md
@@ -14,7 +14,7 @@ keywords:
 description: 
 top_img:
 comments:
-cover: /files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png
+cover: assets/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png
 toc:
 toc_number:
 toc_style_simple:
@@ -33,7 +33,7 @@ abcjs:
 
 经过十个小时的游戏时间，终于把这个游戏白金了。趁着游戏热度过去了，我再围绕这个“年度科幻大作”来胡扯一点😏
 
-![封面](./../../files_/pics/post_pics/2023-11/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png)
+![封面](assets/2023-11-13-从完蛋我被美女包围了看恋爱心理/cover.png)
 
 ### 恋爱游戏？乐子游戏！
 
